# sailing

./: .codecov.yml  .gitignore  Cargo.toml  LICENSE  README-zh_CN.md  README.md  rustfmt.toml
.github/workflows/: benchmark.yml  ci.yml  fuzz.yml  loc.yml  vopr-deep-sweep.yml
benchmarks/: Cargo.toml  README.md
benchmarks/src/: lib.rs
sailing/: Cargo.toml
sailing-compio/: Cargo.toml
sailing-compio/examples/: three_node_quic.rs  three_node_tls.rs
sailing-compio/src/: bridge.rs  clock.rs  config.rs  error.rs  handle.rs  lib.rs  quic_driver.rs  shared.rs  stream_driver.rs  wall_clock.rs
sailing-compio/src/driver/: mod.rs  quic.rs  stream.rs
sailing-compio/src/handle/: mod.rs
sailing-compio/tests/: quic.rs  stream.rs
sailing-compio/tests/common/: mod.rs
sailing-driver/: Cargo.toml
sailing-driver/src/: clock.rs  config.rs  error.rs  lib.rs  node.rs  shared.rs  wall_clock.rs
sailing-driver/src/handle/: mod.rs  tests.rs
sailing-driver/src/node/: mod.rs  tests.rs
sailing-proto/: Cargo.toml  WIRE.md  build.rs
sailing-proto/benches/: codec.rs
sailing-proto/fuzz/: Cargo.toml  README.md
sailing-proto/fuzz/fuzz_targets/: data_codec.rs  frame_decoder.rs  wire_conf_change.rs  wire_message.rs
sailing-proto/proto/sailing/v1/: messages.proto
sailing-proto/src/: conf.rs  config.rs  data.rs  endpoint.rs  entry.rs  error.rs  event.rs  hard_state.rs  id.rs  inflights.rs  lib.rs  message.rs  num.rs  prng.rs  progress.rs  quorum.rs  read_only.rs  state_machine.rs  storage.rs  testkit.rs  time.rs  tracker.rs  wire.rs
sailing-proto/src/conf/: mod.rs  tests.rs
sailing-proto/src/config/: mod.rs  tests.rs
sailing-proto/src/endpoint/: election.rs  membership.rs  mod.rs  persistence.rs  read_index.rs  read_mode.rs  replication.rs  restart.rs  snapshot.rs  tests.rs  transfer.rs
sailing-proto/src/endpoint/tests/: election.rs  lease.rs  leaseguard.rs  membership.rs  misc.rs  mod.rs  read_index.rs  replication.rs  restart.rs  snapshot.rs  transfer.rs
sailing-proto/src/maybe_owned/: mod.rs  tests.rs
sailing-proto/src/message/: mod.rs  tests.rs
sailing-proto/src/progress/: mod.rs  tests.rs
sailing-proto/src/quorum/: mod.rs  tests.rs
sailing-proto/src/read_only/: mod.rs  tests.rs
sailing-proto/src/tracker/: mod.rs  tests.rs
sailing-proto/src/transport/: conn.rs  coordinator.rs  frame.rs  labeled.rs  mod.rs  passthrough.rs  router.rs  stream.rs  tls.rs
sailing-proto/src/transport/conn/: mod.rs  tests.rs
sailing-proto/src/transport/coordinator/: mod.rs  tests.rs
sailing-proto/src/transport/frame/: mod.rs  tests.rs
sailing-proto/src/transport/labeled/: mod.rs  tests.rs
sailing-proto/src/transport/passthrough/: mod.rs  tests.rs
sailing-proto/src/transport/quic/: bridge.rs  conn.rs  coordinator.rs  crypto.rs  identity.rs  mod.rs
sailing-proto/src/transport/quic/bridge/: mod.rs  tests.rs
sailing-proto/src/transport/quic/config/: mod.rs  tests.rs
sailing-proto/src/transport/quic/coordinator/: mod.rs  tests.rs
sailing-proto/src/transport/router/: mod.rs  tests.rs
sailing-proto/src/transport/tls/: mod.rs  tests.rs
sailing-proto/src/wire/: mod.rs  tests.rs
sailing-reactor/: Cargo.toml
sailing-reactor/src/: bridge.rs  lib.rs  task.rs
sailing-reactor/src/driver/: mod.rs  quic.rs  stream.rs
sailing-reactor/tests/: quic_loopback.rs  stream_loopback.rs
sailing-reactor/tests/common/: mod.rs
sailing-simulation/: Cargo.toml
sailing-simulation/src/: checker.rs  cluster.rs  interaction.rs  lib.rs  network.rs  sm.rs  store.rs  vopr.rs
sailing-simulation/tests/: election.rs  fsync_window.rs  network_faults.rs  persistence.rs  transfer.rs
sailing-simulation/tests/interaction/: async_storage_writes.txt  async_storage_writes_append_aba_race.txt  campaign_learner_must_vote.txt  crash_restart.txt  prevote.txt  single_node.txt  slow_follower_after_compaction.txt
sailing/src/: lib.rs
tests/sailing-simulation/: Cargo.toml
tests/sailing-simulation/benches/: endpoint.rs
tests/sailing-simulation/examples/: drift_sweep.rs
tests/sailing-simulation/src/: checker.rs  cluster.rs  interaction.rs  lib.rs  network.rs  sm.rs  store.rs  vopr.rs
tests/sailing-simulation/src/checker/: tests.rs
tests/sailing-simulation/src/cluster/: build.rs  drive.rs  faults.rs  oracles.rs  query.rs
tests/sailing-simulation/src/interaction/: exec.rs  parse.rs  render.rs
tests/sailing-simulation/src/store/: tests.rs
tests/sailing-simulation/src/vopr/: actions.rs  faults.rs  membership.rs  tests.rs
tests/sailing-simulation/tests/: flow_control.rs  fsync_window.rs  interaction.rs  membership.rs  network_faults.rs  oracles.rs  prevote.rs  readindex.rs  replication.rs  snapshot.rs  transfer.rs  vopr.rs
tests/sailing-simulation/tests/interaction/: SKIPPED.md  async_storage_writes.txt  async_storage_writes_append_aba_race.txt  campaign.txt  campaign_learner_must_vote.txt  checkquorum.txt  coalesced_broadcast.txt  concurrent_write_and_add_learner.txt  confchange_add.txt  confchange_learner.txt  confchange_remove.txt  confchange_remove_leader.txt  confchange_v2_add_double.txt  confchange_v2_add_single.txt  confchange_v2_explicit.txt  confchange_v2_replace_leader.txt  crash_restart.txt  follower_restart_no_premature_election.txt  heartbeat_resp_recovers_from_probing.txt  heartbeat_response_recovers_from_probing.txt  isolated_learner_does_not_block_writes.txt  lagging_commit.txt  nonvoter_higher_term_cannot_win.txt  prevote.txt  prevote_checkquorum.txt  prevote_does_not_disrupt_live_leader.txt  prevote_reject_adopts_higher_term.txt  probe_and_replicate.txt  promote_learner_does_not_revert_replication.txt  read_index.txt  removed_leader_restarts_as_non_voter.txt  replicate.txt  replicate_pause.txt  restore_committed_logs_across_compaction.txt  single_node.txt  slow_follower_after_compaction.txt  snapshot.txt  snapshot_and_logs_catch_up_far_follower.txt  snapshot_chunk_delivery_order_independent.txt  snapshot_chunk_lost_then_resent.txt  (+10 more)
