[workspace]
resolver = "3"
members = ["sailing-proto", "sailing-compio", "tests/sailing-simulation"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/al8n/sailing"

[workspace.dependencies]
sailing-proto = { path = "sailing-proto" }
bytes = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = ["display", "is_variant", "unwrap", "try_unwrap"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
quinn-proto = { version = "0.11", default-features = false, features = ["rustls"] }
rcgen = { version = "0.14" }
compio = { version = "0.19", default-features = false }
flume = { version = "0.11", default-features = false, features = ["async"] }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await-macro"] }

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
