[workspace]
resolver = "3"
members = ["sailing-proto", "sailing-driver", "sailing-compio", "sailing-reactor", "tests/sailing-simulation", "benchmarks", "sailing"]
# The cargo-fuzz crate is nightly + libfuzzer with its own target dir; it is its own workspace.
exclude = ["sailing-proto/fuzz"]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MPL-2.0"
repository = "https://github.com/al8n/sailing"

[workspace.dependencies]
bytes = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = ["display", "is_variant", "unwrap", "try_unwrap"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
humantime = "2"
humantime-serde = "1"
clap = { version = "4", default-features = false, features = ["std", "derive", "env"] }
tracing = { version = "0.1", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"
quinn-proto = { version = "0.11", default-features = false }
rcgen = { version = "0.14" }
compio = { version = "0.19", default-features = false }
libc = { version = "0.2" }
flume = { version = "0.12", default-features = false, features = ["async"] }
lochan = "0.1"
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await-macro"] }
agnostic = { version = "0.10", default-features = false }
agnostic-lite = { version = "0.6", default-features = false }
socket2 = { version = "0.6", features = ["all"] }

sailing-proto = { version = "0.0.0", path = "sailing-proto", default-features = false }
sailing-driver = { version = "0.0.0", path = "sailing-driver", default-features = false }
sailing-compio = { version = "0.0.0", path = "sailing-compio", default-features = false }
sailing-reactor = { version = "0.0.0", path = "sailing-reactor", default-features = false }

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

# A workspace release profile: it speeds up the benches/examples/tests built in release here and
# makes the openraft comparison fairer (openraft's benches build with the same optimizations). A
# profile in a workspace root applies only when building THIS workspace; it has no effect on a
# downstream crate that depends on these libraries.
[profile.release]
lto = true
codegen-units = 1
