[package]
name = "sailing-compio"
version = "0.1.0"
description = "Proactor (compio) reference driver for sailing-proto"
edition.workspace = true
# compio's tree floors this well above the workspace's 1.85 (cfg_select in
# compio-executor needs 1.95); the no_std protocol crate keeps the lower MSRV.
rust-version = "1.95"
license.workspace = true
repository.workspace = true

[features]
# The raw-SystemTime wall source (UnverifiedSystemClock) — off by default so it cannot be selected in a
# failover deployment by accident. For tests / tightly-disciplined single-region only.
unverified-wall-clock = []

# Optional config layering on `DriverConfig`. `serde` adds gated Serialize/Deserialize (config files,
# round-trip; the `Duration` knobs render as humantime strings via `humantime-serde`); `clap` adds a
# gated `clap::Args` derive (CLI flags + `SAILING_DRIVER_*` env vars). Both leave the default build
# byte-identical (everything gated). sailing-compio is std, so neither pulls a tier feature.
serde = ["dep:serde", "dep:humantime-serde"]
clap = ["dep:clap", "dep:humantime"]

[dependencies]
sailing-proto = { workspace = true, features = ["tls", "quic"] }
bytes = { workspace = true }
thiserror = { workspace = true }
compio = { workspace = true, features = ["net", "runtime", "macros", "time", "io-uring", "polling"] }
flume = { workspace = true }
lochan = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

# Linux-only: the disciplined wall clock reads the kernel's NTP sync state via adjtimex.
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
rustls = { workspace = true }
futures-executor = { version = "0.3", default-features = false, features = ["std"] }
# Test-only: JSON round-trip of the `serde`-gated `DriverConfig`.
serde_json = { workspace = true }

[lints]
workspace = true
