[package]
name = "sailing-compio"
version = "0.1.0"
description = "Proactor (compio) reference driver for sailing-proto"
edition.workspace = true
# compio's tree floors this well above the workspace's 1.85 (cfg_select in
# compio-executor needs 1.95); the no_std protocol crate keeps the lower MSRV.
rust-version = "1.95"
license.workspace = true
repository.workspace = true

[features]
# The raw-SystemTime wall source (UnverifiedSystemClock) — off by default so it cannot be selected in a
# failover deployment by accident. For tests / tightly-disciplined single-region only.
unverified-wall-clock = ["sailing-driver/unverified-wall-clock"]

# Forward the optional `DriverConfig` config-layering to sailing-driver (where `DriverConfig` lives):
# `serde` enables its gated Serialize/Deserialize, `clap` its gated `clap::Args` derive. Both leave the
# default build byte-identical (everything gated).
serde = ["sailing-driver/serde"]
clap = ["sailing-driver/clap"]

[dependencies]
sailing-proto = { workspace = true, features = ["tls", "quic"] }
sailing-driver = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
compio = { workspace = true, features = ["net", "runtime", "macros", "time", "io-uring", "polling"] }
flume = { workspace = true }
lochan = { workspace = true }
futures-channel = { workspace = true }
# `std` (over the workspace default's macro-only set) brings in `FutureExt::shared` + `Shared`,
# which the coalesced shutdown uses to fan ONE teardown-completion oneshot out to every Handle
# clone. sailing-compio is std, so this adds nothing the crate did not already require.
futures-util = { workspace = true, features = ["std"] }

# Linux-only: the disciplined wall clock reads the kernel's NTP sync state via adjtimex.
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
rustls = { workspace = true }
futures-executor = { version = "0.3", default-features = false, features = ["std"] }

[lints]
workspace = true
