[package]
name = "sailing-compio"
version = "0.0.0"
description = "Proactor (compio) reference driver for sailing-proto"
edition.workspace = true
# compio's tree floors this well above the workspace's 1.85 (cfg_select in
# compio-executor needs 1.95); the no_std protocol crate keeps the lower MSRV.
rust-version = "1.95"
license.workspace = true
repository.workspace = true

[features]
# Pick the ring crypto backend out of the box; switch with `--no-default-features` + your choice
# (e.g. `quic-rustls-aws-lc-rs`). sailing-proto's tls/quic are backend-agnostic.
default = ["tls-rustls-ring", "quic-rustls-ring"]

# TLS/QUIC crypto-backend passthroughs (forwarded to sailing-proto).
tls-rustls-ring = ["sailing-proto/tls-rustls-ring"]
tls-rustls-aws-lc-rs = ["sailing-proto/tls-rustls-aws-lc-rs"]
quic-rustls-ring = ["sailing-proto/quic-rustls-ring"]
quic-rustls-aws-lc-rs = ["sailing-proto/quic-rustls-aws-lc-rs"]
quic-bloom = ["sailing-proto/quic-bloom"]
quic-log = ["sailing-proto/quic-log"]
quic-rustls-log = ["sailing-proto/quic-rustls-log"]
quic-qlog = ["sailing-proto/quic-qlog"]
quic-platform-verifier = ["sailing-proto/quic-platform-verifier"]

# The raw-SystemTime wall source (UnverifiedSystemClock) — off by default so it cannot be selected in a
# failover deployment by accident. For tests / tightly-disciplined single-region only.
unverified-wall-clock = ["sailing-driver/unverified-wall-clock"]

# Forward the optional `DriverConfig` config-layering to sailing-driver (where `DriverConfig` lives):
# `serde` enables its gated Serialize/Deserialize, `clap` its gated `clap::Args` derive. Both leave the
# default build byte-identical (everything gated).
serde = ["sailing-driver/serde"]
clap = ["sailing-driver/clap"]

[dependencies]
sailing-proto = { workspace = true, features = ["tls", "quic"] }
sailing-driver.workspace = true
bytes.workspace = true
thiserror.workspace = true
compio = { workspace = true, features = [
  "net",
  "runtime",
  "macros",
  "time",
  "io-uring",
  "polling",
] }
flume.workspace = true
lochan.workspace = true
futures-channel.workspace = true
futures-util = { workspace = true, features = ["std"] }

# Linux-only: the disciplined wall clock reads the kernel's NTP sync state via adjtimex.
[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dev-dependencies]
rcgen.workspace = true
rustls.workspace = true
futures-executor = { version = "0.3", default-features = false, features = [
  "std",
] }

[lints]
workspace = true
