[package]
name = "sailing-driver"
version = "0.0.0"
description = "Runtime-agnostic driver core for sailing-proto, shared by the sailing-compio and sailing-reactor drivers"
edition.workspace = true
rust-version = "1.91"
license.workspace = true
repository.workspace = true

[features]
# The raw-SystemTime wall source (UnverifiedSystemClock) — off by default so it cannot be selected in a
# failover deployment by accident. For tests / tightly-disciplined single-region only.
unverified-wall-clock = []

# Optional config layering on `DriverConfig`. `serde` adds gated Serialize/Deserialize (config files,
# round-trip; the `Duration` knobs render as humantime strings via `humantime-serde`); `clap` adds a
# gated `clap::Args` derive (CLI flags + `SAILING_DRIVER_*` env vars). Both leave the default build
# byte-identical (everything gated).
serde = ["dep:serde", "dep:humantime-serde"]
clap = ["dep:clap", "dep:humantime"]

[dependencies]
sailing-proto.workspace = true
bytes.workspace = true
thiserror.workspace = true
flume.workspace = true
futures-channel.workspace = true
# `std` (over the workspace default's macro-only set) brings in `FutureExt::shared` + `Shared`, which
# the coalesced shutdown uses to fan ONE teardown-completion oneshot out to every Handle clone.
futures-util = { workspace = true, features = ["std"] }
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

# Linux-only: the disciplined wall clock reads the kernel's NTP sync state via adjtimex.
[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[dev-dependencies]
futures-executor = { version = "0.3", default-features = false, features = [
  "std",
] }
# Test-only: JSON round-trip of the `serde`-gated `DriverConfig`.
serde_json.workspace = true

[lints]
workspace = true
