[package]
name = "sailing-proto"
description = "Sans-I/O Raft consensus core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = [
  "bytes/std",
  "thiserror/std",
  "derive_more/std",
  "buffa/std",
  "rand/std",
  "cheap-clone/default",
]
alloc = ["cheap-clone/alloc"]
tcp = []
fuzzing = []
tls = ["tcp", "std", "dep:rustls", "tls-ring"]
tls-ring = ["rustls?/ring"]
tls-aws-lc-rs = ["rustls?/aws-lc-rs"]
quic = [
  "tcp",
  "std",
  "dep:rustls",
  "dep:quinn-proto",
  "dep:rustls-pemfile",
  "tls-ring",
]

serde = ["std", "dep:serde", "serde/std", "dep:humantime-serde"]
clap = ["std", "dep:clap", "dep:humantime"]

[dependencies]
buffa = { version = "0.8", default-features = false }
cheap-clone = { version = "0.3", default-features = false }
bytes.workspace = true
thiserror.workspace = true
derive_more.workspace = true
rand = { version = "0.10", default-features = false }
rand_core = { version = "0.10", default-features = false }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
quinn-proto = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[build-dependencies]
buffa-build = "0.8"

[dev-dependencies]
rcgen.workspace = true
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
] }
serde_json.workspace = true

[[bench]]
name = "codec"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
