[package]
name = "sailing-proto"
description = "Sans-I/O Raft consensus core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = [
  "bytes/std",
  "thiserror/std",
  "derive_more/std",
  "buffa/std",
  "rand/std",
  "cheap-clone/default",
]
alloc = ["cheap-clone/alloc"]
tcp = []
fuzzing = []

# TLS-over-TCP record layer — backend-agnostic. Bare `tls` links rustls but no crypto provider;
# enable a passthrough below (e.g. `tls-rustls-ring`) to pick one. `quinn-proto?/...` keeps the
# QUIC provider in step when both transports are built.
tls = ["tcp", "std", "dep:rustls", "dep:rustls-pemfile"]
tls-rustls-ring = ["tls", "rustls/ring", "quinn-proto?/rustls-ring"]
tls-rustls-aws-lc-rs = ["tls", "rustls/aws_lc_rs", "quinn-proto?/rustls-aws-lc-rs"]

# QUIC (quinn-proto) — backend-agnostic. Bare `quic` has no crypto provider (a `compile_error!` in
# the coordinator guides you); enable a passthrough below. The crypto backends build the rustls
# provider the QUIC configs are constructed from; the auxiliaries are quinn-proto pass-throughs.
quic = ["tcp", "std", "dep:rustls", "dep:quinn-proto", "dep:rustls-pemfile"]
quic-rustls-ring = ["quic", "rustls/ring", "quinn-proto/rustls-ring"]
quic-rustls-aws-lc-rs = ["quic", "rustls/aws_lc_rs", "quinn-proto/rustls-aws-lc-rs"]
quic-bloom = ["quic", "quinn-proto/bloom"]
quic-log = ["quic", "quinn-proto/log"]
quic-rustls-log = ["quic", "quinn-proto/rustls-log"]
quic-qlog = ["quic", "quinn-proto/qlog"]
quic-platform-verifier = ["quic", "quinn-proto/platform-verifier"]

serde = ["std", "dep:serde", "serde/std", "dep:humantime-serde"]
clap = ["std", "dep:clap", "dep:humantime"]

[dependencies]
buffa = { version = "0.8", default-features = false }
cheap-clone = { version = "0.3", default-features = false }
bytes.workspace = true
thiserror.workspace = true
derive_more.workspace = true
rand = { version = "0.10", default-features = false }
rand_core = { version = "0.10", default-features = false }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
quinn-proto = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[build-dependencies]
buffa-build = "0.8"

[dev-dependencies]
rcgen.workspace = true
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
] }
serde_json.workspace = true

[[bench]]
name = "codec"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
# Explicit set instead of all-features: the *-fips backends pull aws-lc-rs-fips, which needs a Go
# toolchain docs.rs does not provide. This documents the full public API without fips.
features = [
  "std",
  "tcp",
  "tls-rustls-ring",
  "quic-rustls-ring",
  "quic-bloom",
  "quic-log",
  "quic-rustls-log",
  "quic-qlog",
  "quic-platform-verifier",
  "serde",
  "clap",
]
rustdoc-args = ["--cfg", "docsrs"]
