[package]
name = "sailing-proto"
description = "Sans-I/O Raft consensus core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = [
  "bytes/std",
  "thiserror/std",
  "derive_more/std",
  "buffa/std",
  "rand/std",
  "cheap-clone/default",
  # A std app that enables `tracing` needs tracing's std dispatcher — the macros otherwise emit to a
  # dispatcher that cannot be installed. Weak-dep syntax: no effect unless `tracing` is also on.
  "tracing?/std",
]
alloc = ["cheap-clone/alloc"]
tcp = []
fuzzing = []

# TLS-over-TCP record layer — backend-agnostic. Bare `tls` links rustls but no crypto provider;
# enable a passthrough below (e.g. `tls-rustls-ring`) to pick one. These pick ONLY the rustls
# provider for the byte-stream transport — they deliberately do NOT touch quinn-proto's backend, so
# a mixed build (e.g. `tls-rustls-ring` + `quic-aws-lc-rs`) keeps QUIC genuinely aws-lc-rs-only.
# NOTE: in such a mixed build rustls links BOTH providers, so the byte-stream TLS caller must pick
# one explicitly (`rustls::*::builder_with_provider` or `CryptoProvider::install_default`) — the
# transport takes a caller-built rustls config and installs no process default of its own.
tls = ["tcp", "std", "dep:rustls", "dep:rustls-pemfile"]
tls-rustls-ring = ["tls", "rustls/ring"]
tls-rustls-aws-lc-rs = ["tls", "rustls/aws_lc_rs"]

# QUIC (quinn-proto) — backend-agnostic. Bare `quic` has no crypto provider (a `compile_error!` in
# the coordinator guides you); enable a passthrough below. The crypto backends build the rustls
# provider the QUIC configs are constructed from; the auxiliaries are quinn-proto pass-throughs.
quic = ["tcp", "std", "dep:rustls", "dep:quinn-proto", "dep:rustls-pemfile"]
# Crypto backends. quinn-proto's QUIC handshake is rustls-only (its sole `crypto::Session`), so
# "ring"/"aws-lc-rs" ARE the rustls CryptoProviders. A backend feature supplies the compile-time
# default for the built-in mTLS builder; a caller can also choose the provider at runtime via
# `ClusterTls::with_provider`, or build the quinn configs directly via `QuicOptions::new`.
quic-rustls-ring = ["quic", "rustls/ring", "quinn-proto/rustls-ring"]
quic-rustls-aws-lc-rs = ["quic", "rustls/aws_lc_rs", "quinn-proto/rustls-aws-lc-rs"]
# Convenience aliases onto the rustls providers (memberlist-style names); `quic-rustls` follows
# quinn's own `rustls = rustls-ring` default. (A FIPS build is a runtime choice via
# `ClusterTls::with_provider` / `QuicOptions::new`, not a compile-time feature: a compile-time FIPS
# selection could be silently overridden by ring under feature unification.)
quic-ring = ["quic-rustls-ring"]
quic-aws-lc-rs = ["quic-rustls-aws-lc-rs"]
quic-rustls = ["quic-rustls-ring"]
quic-bloom = ["quic", "quinn-proto/bloom"]
quic-log = ["quic", "quinn-proto/log"]
quic-rustls-log = ["quic", "quinn-proto/rustls-log"]
quic-qlog = ["quic", "quinn-proto/qlog"]
quic-platform-verifier = ["quic", "quinn-proto/platform-verifier"]

serde = ["std", "dep:serde", "serde/std", "dep:humantime-serde"]
clap = ["std", "dep:clap", "dep:humantime"]

# Emit `tracing` spans/events for consensus milestones (leader/term changes, commits, snapshot
# installs, membership changes) and the FSM input paths. Off by default = zero cost; no `std` required.
tracing = ["dep:tracing"]

[dependencies]
buffa = { version = "0.8", default-features = false }
cheap-clone = { version = "0.3", default-features = false }
bytes.workspace = true
thiserror.workspace = true
derive_more.workspace = true
rand = { version = "0.10", default-features = false }
rand_core = { version = "0.10", default-features = false }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
quinn-proto = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[build-dependencies]
buffa-build = "0.8"

[dev-dependencies]
rcgen.workspace = true
criterion = { version = "0.8", default-features = false, features = [
  "cargo_bench_support",
] }
serde_json.workspace = true

[[bench]]
name = "codec"
harness = false

[lints]
workspace = true

[package.metadata.docs.rs]
# Explicit ring-backed set instead of all-features: the aws-lc-rs backends pull a C/cmake build
# docs.rs does not reliably provide. This documents the full public API on the ring provider.
features = [
  "std",
  "tcp",
  "tls-rustls-ring",
  "quic-rustls-ring",
  "quic-bloom",
  "quic-log",
  "quic-rustls-log",
  "quic-qlog",
  "quic-platform-verifier",
  "serde",
  "clap",
]
rustdoc-args = ["--cfg", "docsrs"]
