[package]
name = "sailing-reactor"
version = "0.1.0"
description = "Reactor-I/O (tokio/smol via agnostic) reference driver for sailing-proto"
edition.workspace = true
rust-version = "1.95"
license.workspace = true
repository.workspace = true

[features]
tokio = ["agnostic/tokio"]
smol = ["agnostic/smol"]

serde = ["sailing-driver/serde"]
clap = ["sailing-driver/clap"]
unverified-wall-clock = ["sailing-driver/unverified-wall-clock"]

[dependencies]
sailing-proto = { workspace = true, features = ["tls", "quic"] }
sailing-driver.workspace = true
agnostic = { workspace = true, features = ["net"] }
agnostic-lite = { workspace = true, features = ["time"] }
bytes = { workspace = true, features = ["std"] }
flume.workspace = true
futures-channel.workspace = true
futures-util = { workspace = true, features = ["std"] }
socket2.workspace = true

[dev-dependencies]
rcgen.workspace = true
rustls.workspace = true
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "time",
] }

# The loopback cluster runs on a concrete tokio runtime (the multi-thread flavor proves `run()` is Send).
[[test]]
name = "stream_loopback"
required-features = ["tokio"]

[[test]]
name = "quic_loopback"
required-features = ["tokio"]

[lints]
workspace = true
