[package]
name = "sailing-reactor"
version = "0.0.0"
description = "Reactor-I/O (tokio/smol via agnostic) reference driver for sailing-proto"
edition.workspace = true
rust-version = "1.95"
license.workspace = true
repository.workspace = true

[features]
# Pick the ring crypto backend out of the box; switch with `--no-default-features` + your choice
# (e.g. `tokio,quic-rustls-aws-lc-rs`). sailing-proto's tls/quic are backend-agnostic.
default = ["tls-rustls-ring", "quic-rustls-ring"]

tokio = ["agnostic/tokio"]
smol = ["agnostic/smol"]

# TLS/QUIC crypto-backend passthroughs (forwarded to sailing-proto).
tls-rustls-ring = ["sailing-proto/tls-rustls-ring"]
tls-rustls-aws-lc-rs = ["sailing-proto/tls-rustls-aws-lc-rs"]
quic-rustls-ring = ["sailing-proto/quic-rustls-ring"]
quic-rustls-aws-lc-rs = ["sailing-proto/quic-rustls-aws-lc-rs"]
quic-bloom = ["sailing-proto/quic-bloom"]
quic-log = ["sailing-proto/quic-log"]
quic-rustls-log = ["sailing-proto/quic-rustls-log"]
quic-qlog = ["sailing-proto/quic-qlog"]
quic-platform-verifier = ["sailing-proto/quic-platform-verifier"]

serde = ["sailing-driver/serde"]
clap = ["sailing-driver/clap"]
unverified-wall-clock = ["sailing-driver/unverified-wall-clock"]

[dependencies]
sailing-proto = { workspace = true, features = ["tls", "quic"] }
sailing-driver.workspace = true
agnostic = { workspace = true, features = ["net"] }
agnostic-lite = { workspace = true, features = ["time"] }
bytes = { workspace = true, features = ["std"] }
flume.workspace = true
futures-channel.workspace = true
futures-util = { workspace = true, features = ["std"] }
socket2.workspace = true

[dev-dependencies]
rcgen.workspace = true
rustls.workspace = true
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "time",
] }

# The loopback cluster runs on a concrete tokio runtime (the multi-thread flavor proves `run()` is Send).
[[test]]
name = "stream_loopback"
required-features = ["tokio"]

[[test]]
name = "quic_loopback"
required-features = ["tokio"]

[lints]
workspace = true
