[package]
name = "sailing"
version = "0.0.0"
description = "Sans-I/O Raft: the protocol core plus pluggable I/O drivers, behind one umbrella crate."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sailing-proto = { workspace = true, default-features = false }
# default-features = false so the driver's baked-in default backend (ring) does not force itself on;
# the umbrella selects the crypto backend via its own passthrough features (default picks ring).
sailing-reactor = { workspace = true, optional = true, default-features = false }
sailing-compio = { workspace = true, optional = true, default-features = false }

[features]
default = ["std", "tokio", "tls-rustls-ring", "quic-rustls-ring"]

# Capability tiers, forwarded to the protocol core. `std` and `alloc` are independent
# (the core is no_std+alloc-capable), mirroring sailing-proto.
alloc = ["sailing-proto/alloc"]
std = ["sailing-proto/std"]

# I/O driver selection. `reactor` is the runtime-agnostic driver (pick the runtime with
# `tokio` or `smol`); `compio` is the completion-I/O backend. Both require std.
reactor = ["dep:sailing-reactor", "std"]
tokio = ["reactor", "sailing-reactor/tokio"]
smol = ["reactor", "sailing-reactor/smol"]
compio = ["dep:sailing-compio", "std"]

# Transport record layer (backend-agnostic) + the crypto-backend passthroughs, forwarded to the
# core and whichever drivers are enabled. Bare `tls`/`quic` link no provider; pick one with a
# `*-rustls-ring` / `*-rustls-aws-lc-rs` passthrough (the default selects ring).
tcp = ["sailing-proto/tcp"]
tls = ["sailing-proto/tls"]
quic = ["sailing-proto/quic"]
tls-rustls-ring = ["sailing-proto/tls-rustls-ring", "sailing-reactor?/tls-rustls-ring", "sailing-compio?/tls-rustls-ring"]
tls-rustls-aws-lc-rs = ["sailing-proto/tls-rustls-aws-lc-rs", "sailing-reactor?/tls-rustls-aws-lc-rs", "sailing-compio?/tls-rustls-aws-lc-rs"]
quic-rustls-ring = ["sailing-proto/quic-rustls-ring", "sailing-reactor?/quic-rustls-ring", "sailing-compio?/quic-rustls-ring"]
quic-rustls-aws-lc-rs = ["sailing-proto/quic-rustls-aws-lc-rs", "sailing-reactor?/quic-rustls-aws-lc-rs", "sailing-compio?/quic-rustls-aws-lc-rs"]
quic-ring = ["sailing-proto/quic-ring", "sailing-reactor?/quic-ring", "sailing-compio?/quic-ring"]
quic-aws-lc-rs = ["sailing-proto/quic-aws-lc-rs", "sailing-reactor?/quic-aws-lc-rs", "sailing-compio?/quic-aws-lc-rs"]
quic-rustls = ["sailing-proto/quic-rustls", "sailing-reactor?/quic-rustls", "sailing-compio?/quic-rustls"]
quic-bloom = ["sailing-proto/quic-bloom", "sailing-reactor?/quic-bloom", "sailing-compio?/quic-bloom"]
quic-log = ["sailing-proto/quic-log", "sailing-reactor?/quic-log", "sailing-compio?/quic-log"]
quic-rustls-log = ["sailing-proto/quic-rustls-log", "sailing-reactor?/quic-rustls-log", "sailing-compio?/quic-rustls-log"]
quic-qlog = ["sailing-proto/quic-qlog", "sailing-reactor?/quic-qlog", "sailing-compio?/quic-qlog"]
quic-platform-verifier = ["sailing-proto/quic-platform-verifier", "sailing-reactor?/quic-platform-verifier", "sailing-compio?/quic-platform-verifier"]

# Optional config layering: `serde` adds gated Serialize/Deserialize, `clap` a gated
# clap::Args derive — forwarded to the core and to whichever drivers are enabled.
serde = ["std", "sailing-proto/serde", "sailing-reactor?/serde", "sailing-compio?/serde"]
clap = ["std", "sailing-proto/clap", "sailing-reactor?/clap", "sailing-compio?/clap"]

# The raw-SystemTime wall-clock source (off by default; std drivers only — see the driver docs).
unverified-wall-clock = [
  "sailing-reactor?/unverified-wall-clock",
  "sailing-compio?/unverified-wall-clock",
]

[lints]
workspace = true
