[package]
name = "sailing-simulation"
description = "Deterministic simulation harness for sailing-proto"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# When enabled, every consensus message is round-tripped through the real `Message<I>` wire codec
# (encode -> decode) at the delivery seam — so the whole VOPR fuzzer exercises the codec under
# crashes, partitions, and membership churn. Off by default (the codec round-trip is a verified
# identity, so it does not change behavior, but it adds per-message overhead).
wire = []

[dependencies]
sailing-proto = { workspace = true, features = ["std"] }
bytes.workspace = true
derive_more.workspace = true

[dev-dependencies]
# Bench-only: criterion without plotters/rayon (lean dep tree; `cargo bench` + CI compile-check).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "endpoint"
harness = false

[lints]
workspace = true
